# grammar-inference

./: .gitignore  LICENSE  README.md  grammar-inference.cabal  stack.yaml
app/: Main.hs
src/: Atom.hs  Classes.hs  Derivation.hs  Rule.hs  Type.hs  Unification.hs
