name:                grammar-inference
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ayberkt/grammar-inference#readme
license:             BSD3
license-file:        LICENSE
author:              Ayberk Tosun
maintainer:          ayberk.tosun@gmail.com
copyright:           Ayberk Tosun 2015
category:            Natural language processing
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Rule
                     , Classes
                     , Atom
                     , Type
                     , Derivation
                     , Unification
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  build-depends:       base >= 4.7 && < 5
                     , unordered-containers >= 0.2.5.1
  default-language:    Haskell2010

executable infer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall -fno-warn-orphans
  build-depends:       base
                     , grammar-inference
                     , unordered-containers >= 0.2.5.1
  default-language:    Haskell2010

test-suite grammar-inference-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , grammar-inference
                     , unordered-containers >= 0.2.5.1
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ayberkt/grammar-inference
